Fixed overflow when the scroll bar appears on any of the pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,16 +19,17 @@
 
 }
 
-
+/* Stops the scroll shifting the content left */
+html {
+  overflow-y: scroll;
+}
 
 /* Circle that take up 50% with a white colour gradually going to background colour*/
-
 body {
     /* color: var(--primary-color); */
     font-family: var(--primary-font);
     background: radial-gradient(circle, white 50%, #dbffe0 100%);
 }
-
 
 h1,
 h2,
@@ -51,7 +52,6 @@ h3 {
 }
 
 /* Buttons */
-
 .custom-button-filled {
     border: 2px solid var(--highlight-color);
     background-color: var(--highlight-color);
@@ -80,7 +80,6 @@ nav {
 }
 
 /* Gives the active page on the nav an underline */
-
 .navbar-nav .nav-link.active {
     text-decoration: underline;
     color: var(--primary-color);
@@ -96,7 +95,6 @@ nav {
 }
 
 /* Footer Styling */
-
 .fa-instagram, 
 .fa-square-facebook,
 .fa-x-twitter,
@@ -126,7 +124,6 @@ footer .social-links i:hover {
 
 
 /*Media quries for greater control at different resolutions */
-
 @media (min-width: 768px) {
 
    
